--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -9,7 +9,11 @@
             <p class="products__description">Soft ice cream with a delicate taste. Made with milk, cream, sugar and
                 natural
                 stabilizer</p>
-            <a class="products__link" href="./products-modal.html">--></a>
+            <a class="products__link" href="./products-modal.html">-->
+                <svg class="" width="40" height="">
+                    <use href="../images/svg?"></use>
+                </svg>
+            </a>
         </li>
 
         <li class="products__item">
@@ -17,14 +21,22 @@
             <p class="products__description">Fragrant invigorating drink created from 100% natural ingredients without
                 the
                 use of preservatives and flavor enhancers</p>
-            <a class="products__link" href="./products-modal.html">--></a>
+            <a class="products__link" href="./products-modal.html">-->
+                <svg class="" width="40" height="">
+                    <use href="../images/svg?"></use>
+                </svg>
+            </a>
         </li>
 
         <li class="products__item">
             <h3 class="products__name">milkshakes</h3>
             <p class="products__description">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits,
                 berries and other sweets of your choice</p>
-            <a class="products__link" href="./products-modal.html">--></a>
+            <a class="products__link" href="./products-modal.html">-->
+                <svg class="" width="40" height="">
+                    <use href="../images/svg?"></use>
+                </svg>
+            </a>
         </li>
     </ul>
 </article>
