--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,7 +10,7 @@
                 natural
                 stabilizer</p>
             <a class="products__link" href="./products-modal.html">-->
-                <svg class="" width="40" height="">
+                <svg class="product__icon" width="40" height="">
                     <use href="../images/svg?"></use>
                 </svg>
             </a>
@@ -22,7 +22,7 @@
                 the
                 use of preservatives and flavor enhancers</p>
             <a class="products__link" href="./products-modal.html">-->
-                <svg class="" width="40" height="">
+                <svg class="product__icon" width="40" height="">
                     <use href="../images/svg?"></use>
                 </svg>
             </a>
@@ -33,7 +33,7 @@
             <p class="products__description">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits,
                 berries and other sweets of your choice</p>
             <a class="products__link" href="./products-modal.html">-->
-                <svg class="" width="40" height="">
+                <svg class="product__icon" width="40" height="">
                     <use href="../images/svg?"></use>
                 </svg>
             </a>
