--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,17 +1,17 @@
 <article class="products">
-
-    <label class="products__label " for="products">100% natural</label>
-    <h2 class="products__title" id="products">Products</h2>
-
+    <label class="products__label">
+        100% natural
+        <h2 class="products__title" id="products">Products</h2>
+    </label>
     <ul class="products__list">
         <li class="products__item">
             <h3 class="products__name">ice cream</h3>
             <p class="products__description">Soft ice cream with a delicate taste. Made with milk, cream, sugar and
                 natural
                 stabilizer</p>
-            <a class="products__link" href="./products-modal.html">-->
-                <svg class="product__icon" width="40" height="">
-                    <use href="../images/svg?"></use>
+            <a class="products__link" href="./products-modal.html">
+                <svg class="product__icon" width="40" height="16">
+                    <use href=""></use>
                 </svg>
             </a>
         </li>
@@ -21,9 +21,9 @@
             <p class="products__description">Fragrant invigorating drink created from 100% natural ingredients without
                 the
                 use of preservatives and flavor enhancers</p>
-            <a class="products__link" href="./products-modal.html">-->
-                <svg class="product__icon" width="40" height="">
-                    <use href="../images/svg?"></use>
+            <a class="products__link" href="./products-modal.html">
+                <svg class="product__icon" width="40" height="16">
+                    <use href=""></use>
                 </svg>
             </a>
         </li>
@@ -31,12 +31,14 @@
         <li class="products__item">
             <h3 class="products__name">milkshakes</h3>
             <p class="products__description">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits,
-                berries and other sweets of your choice</p>
-            <a class="products__link" href="./products-modal.html">-->
-                <svg class="product__icon" width="40" height="">
-                    <use href="../images/svg?"></use>
+                berries and other sweets of your choice
+            </p>
+            <a class="products__link" href="./products-modal.html">
+                <svg class="product__icon" width="40" height="16">
+                    <use href=""></use>
                 </svg>
             </a>
         </li>
+
     </ul>
 </article>
