--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,8 +1,11 @@
 <article class="products">
-    <label class="products__label">
-        100% natural
-        <h2 class="products__title" id="products">Products</h2>
-    </label>
+    <span> 100% natural </span>
+    <h2 class="products__title" id="products">Products</h2>
+
+
+
+
+
     <ul class="products__list">
         <li class="products__item">
             <h3 class="products__name">ice cream</h3>
@@ -22,9 +25,7 @@
                 the
                 use of preservatives and flavor enhancers</p>
             <a class="products__link" href="./products-modal.html">
-                <svg class="product__icon" width="40" height="16">
-                    <use href=""></use>
-                </svg>
+
             </a>
         </li>
 
