добавил напоминание для svg

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,10 +1,14 @@
 <article class="products">
+
+
+    <!--  Products title -->
+
     <span> 100% natural </span>
     <h2 class="products__title" id="products">Products</h2>
 
 
 
-
+    <!-- Products card-set -->
 
     <ul class="products__list">
         <li class="products__item">
@@ -25,7 +29,7 @@
                 the
                 use of preservatives and flavor enhancers</p>
             <a class="products__link" href="./products-modal.html">
-
+                <!-- Вот тут добавляю svg - пропадает с разметки 3тий элемент списка.. Понять не могу почему ! -->
             </a>
         </li>
 
@@ -43,3 +47,5 @@
 
     </ul>
 </article>
+
+<!-- End products -->
