Посилка у міксінах та змінних

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,4 @@
-@import './common';
-@import './example';
+@import './base/base';
+@import './utils/utils';
+@import './components/components';
+@import './layouts/layouts';
