--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,25 @@
-@import './base/base';
-@import './utils/utils';
-@import './components/components';
-@import './layouts/layouts';
+@import './base/base-styles';
+@import './base/common';
+@import './base/reset';
+@import '/src/sass/utils/mixins';
+@import './utils/vars';
+
+@import './layouts/about';
+@import './layouts/advantages';
+@import './layouts/contacts';
+@import './layouts/customer-reviews';
+@import './layouts/footer';
+@import './layouts/gallery';
+@import './layouts/header-hero';
+@import './layouts/products';
+
+@import './components/arrow';
+@import './components/btn-border';
+@import './components/btn-fill';
+@import './components/link';
+@import './components/social-list';
+@import './components/modals/about-modal';
+@import './components/modals/franchise-modal';
+@import './components/modals/hero-modal';
+@import './components/modals/location-modal';
+@import './components/modals/products-modal';
