--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -25,17 +25,22 @@
 
         <li class="products__item">
             <h3 class="products__name">ice coffee</h3>
-            <p class="products__description">Fragrant invigorating drink created from 100% natural ingredients without
+            <p class="products__description">Fragrant invigorating drink created from 100% natural ingredients
+                without
                 the
                 use of preservatives and flavor enhancers</p>
             <a class="products__link" href="./products-modal.html">
                 <!-- Вот тут добавляю svg - пропадает с разметки 3тий элемент списка.. Понять не могу почему ! -->
+                <svg class="product__icon" width="40" height="16">
+                    <use href=""></use>
+                </svg>
             </a>
         </li>
 
         <li class="products__item">
             <h3 class="products__name">milkshakes</h3>
-            <p class="products__description">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits,
+            <p class="products__description">Sweet drinks based on milk and ice cream, supplemented with syrups,
+                fruits,
                 berries and other sweets of your choice
             </p>
             <a class="products__link" href="./products-modal.html">
