.visually-hidden додано

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -23,3 +23,4 @@
 @import './components/modals/hero-modal';
 @import './components/modals/location-modal';
 @import './components/modals/products-modal';
+@import './utils/visually-hidden';
