--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -7,21 +7,21 @@
     </a>
     <nav>
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">How it’s made?</a></li>
+            <li><a href="">Our products</a></li>
+            <li><a href="">Contact</a></li>
         </ul>
     </nav>
-    <button type="button"></button> <!-- модалка -->
+    <button type="button">Buy now</button> <!-- модалка -->
 </header>
 
 <!-- hero -->
 <section>
     <div>
-        <p>ice cream made with passion</p>
-        <button>Products</button> <!-- це буде якір на секцію продуктів -->
-        <button>How it’s made?</button> <!-- модалка -->
+        <h1>ice cream made with passion</h1>
+        <button>Products</button> 
+        <button>How it’s made?</button>
     </div>
 
     <div>
@@ -30,20 +30,29 @@
             <source srcset="
                 ../images/header/img2d@1x.webp    1x,
                 ../images/header/img2d@2x.webp    2x
-                  " type="image/webp" media="">
+                  " type="image/webp" media="(min-width: 1200px)">
             <source srcset="
                 ../images/header/img2d@1x.jpg    1x,
                 ../images/header/img2d@2x.jpg    2x
-                  " type="image/jpeg" media="">
+                  " type="image/jpeg" media="(min-width: 1200px)">
 <!-- tablet -->
             <source srcset="
                 ../images/header/img2t@1x.webp    1x,
                 ../images/header/img2t@2x.webp    2x
-                  " type="image/webp" media="">
+                  " type="image/webp" media="(min-width: 768px)">
             <source srcset="
                 ../images/header/img2t@1x.jpg    1x,
                 ../images/header/img2t@2x.jpg    2x
-                  " type="image/jpeg" media="">
+                  " type="image/jpeg" media="(min-width: 768px)">
+<!-- mobile -->
+            <source srcset="
+                ../images/header/img2m@1x.webp    1x,
+                ../images/header/img2m@2x.webp    2x
+                  " type="image/webp" media="(max-width: 767px)">
+            <source srcset="
+                ../images/header/img2m@1x.jpg    1x,
+                ../images/header/img2m@2x.jpg    2x
+                  " type="image/jpeg" media="(max-width: 767px)">   
             <img src="../images/header/" alt="тарілка з (кульковим морозивом * 9)">
         </picture>
         <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</P>
@@ -56,34 +65,46 @@
     <div>
         <picture>
 <!-- desc -->
-<source srcset="
-../images/header/img2d@1x.webp    1x,
-../images/header/img2d@2x.webp    2x
-  " type="image/webp" media="">
-<source srcset="
-../images/header/img2d@1x.jpg    1x,
-../images/header/img2d@2x.jpg    2x
-  " type="image/jpeg" media="">
+            <source srcset="
+                ../images/header/img1d@1x.webp    1x,
+                ../images/header/img1d@2x.webp    2x
+                  " type="image/webp" media="(min-width: 1200px)">
+            <source srcset="
+                ../images/header/img1d@1x.jpg    1x,
+                ../images/header/img1d@2x.jpg    2x
+                  " type="image/jpeg" media="(min-width: 1200px)">
 <!-- tablet -->
-<source srcset="
-../images/header/img2t@1x.webp    1x,
-../images/header/img2t@2x.webp    2x
-  " type="image/webp" media="">
-<source srcset="
-../images/header/img2t@1x.jpg    1x,
-../images/header/img2t@2x.jpg    2x
-  " type="image/jpeg" media="">
-<img src="../images/header/" alt="тарілка з (кульковим морозивом * 9)">
+            <source srcset="
+                ../images/header/img1t@1x.webp    1x,
+                ../images/header/img1t@2x.webp    2x
+                  " type="image/webp" media="(min-width: 768px)">
+            <source srcset="
+                ../images/header/img1t@1x.jpg    1x,
+                ../images/header/img1t@2x.jpg    2x
+                  " type="image/jpeg" media="(min-width: 768px)">
+<!-- mobile -->
+            <source srcset="
+                ../images/header/img1m@1x.webp    1x,
+                ../images/header/img1m@2x.webp    2x
+                  " type="image/webp" media="(max-width: 767px)">
+            <source srcset="
+                ../images/header/img1m@1x.jpg    1x,
+                ../images/header/img1m@2x.jpg    2x
+                  " type="image/jpeg" media="(max-width: 767px)">
+            <img src="../images/header/img1d@1x.jpg" alt="упоротий змій-морозинич">
         </picture>
-        <ul>
-            <li>
-                <p>16</p>
-                <p>cafes</p>
-            </li>
-            <li>
-                <p>23</p>
-                <p>food trucks</p>
-            </li>
-        </ul>
+
+        <div>
+            <ul>
+                <li>
+                    <p>16</p>
+                    <p>cafes</p>
+                </li>
+                <li>
+                    <p>23</p>
+                    <p>food trucks</p>
+                </li>
+            </ul>
+        </div>
     </div>
 </section>
