--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -18,7 +18,7 @@
                 stabilizer</p>
             <a class="products__link" href="./products-modal.html">
                 <svg class="product__icon" width="40" height="16">
-                    <use href=""></use>
+                    <use href="../images/icons.svg#icon-arrow-default"></use>
                 </svg>
             </a>
         </li>
@@ -32,7 +32,7 @@
             <a class="products__link" href="./products-modal.html">
                 <!-- Вот тут добавляю svg - пропадает с разметки 3тий элемент списка.. Понять не могу почему ! -->
                 <svg class="product__icon" width="40" height="16">
-                    <use href=""></use>
+                    <use href="../images/icons.svg#icon-arrow-default"></use>
                 </svg>
             </a>
         </li>
@@ -45,7 +45,7 @@
             </p>
             <a class="products__link" href="./products-modal.html">
                 <svg class="product__icon" width="40" height="16">
-                    <use href=""></use>
+                    <use href="../images/icons.svg#icon-arrow-default"></use>
                 </svg>
             </a>
         </li>
