(Ab-1) Виправив недолік з заголком html

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,6 @@
 <section class="about-us">
    <label>
-      <span class="about-us__subtitle">tradition and love</span>
+      <p class="about-us__subtitle">tradition and love</p>
       <h2 class="about-us__title">how it’s made?</h2>
    </label>
    <picture>
