--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,7 +1,7 @@
 <header>
     <a href="">
         <svg>
-            <use href="../images/icons.svg#icon-ice-cream"></use>
+            <use href="./images/icons.svg#icon-ice-cream"></use>
         </svg>
         <p>ce</p>
     </a>
@@ -28,37 +28,37 @@
         <picture>
 <!-- desc -->
             <source srcset="
-                ../images/header/img2d@1x.webp    1x,
-                ../images/header/img2d@2x.webp    2x
+                ./images/header/img2d@1x.webp    1x,
+                ./images/header/img2d@2x.webp    2x
                   " type="image/webp" media="(min-width: 1200px)">
             <source srcset="
-                ../images/header/img2d@1x.jpg    1x,
-                ../images/header/img2d@2x.jpg    2x
+                ./images/header/img2d@1x.jpg    1x,
+                ./images/header/img2d@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 1200px)">
 <!-- tablet -->
             <source srcset="
-                ../images/header/img2t@1x.webp    1x,
-                ../images/header/img2t@2x.webp    2x
+                ./images/header/img2t@1x.webp    1x,
+                ./images/header/img2t@2x.webp    2x
                   " type="image/webp" media="(min-width: 768px)">
             <source srcset="
-                ../images/header/img2t@1x.jpg    1x,
-                ../images/header/img2t@2x.jpg    2x
+                ./images/header/img2t@1x.jpg    1x,
+                ./images/header/img2t@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 768px)">
 <!-- mobile -->
+            <!-- <source srcset="
+                ./images/header/img2m@1x.webp    1x,
+                ./images/header/img2m@2x.webp    2x
+                  " type="image/webp" media="(max-width: 767px)"> -->
             <source srcset="
-                ../images/header/img2m@1x.webp    1x,
-                ../images/header/img2m@2x.webp    2x
-                  " type="image/webp" media="(max-width: 767px)">
-            <source srcset="
-                ../images/header/img2m@1x.jpg    1x,
-                ../images/header/img2m@2x.jpg    2x
+                ./images/header/img2m@1x.jpg    1x,
+                ./images/header/img2m@2x.jpg    2x
                   " type="image/jpeg" media="(max-width: 767px)">   
-            <img src="../images/header/" alt="тарілка з (кульковим морозивом * 9)">
+            <img src="./images/header/img2m@2x.jpg" alt="тарілка з (кульковим морозивом * 9)">
         </picture>
         <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</P>
 <!-- не знайшов використання стрілки, не розумію її практичного значення -->
         <svg>
-            <use href="../images/icons.svg#icon-arrow-default"></use>
+            <use href="./images/icons.svg#icon-arrow-default"></use>
         </svg>
     </div>
 
@@ -66,32 +66,32 @@
         <picture>
 <!-- desc -->
             <source srcset="
-                ../images/header/img1d@1x.webp    1x,
-                ../images/header/img1d@2x.webp    2x
+                ./images/header/img1d@1x.webp    1x,
+                ./images/header/img1d@2x.webp    2x
                   " type="image/webp" media="(min-width: 1200px)">
             <source srcset="
-                ../images/header/img1d@1x.jpg    1x,
-                ../images/header/img1d@2x.jpg    2x
+                ./images/header/img1d@1x.jpg    1x,
+                ./images/header/img1d@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 1200px)">
 <!-- tablet -->
             <source srcset="
-                ../images/header/img1t@1x.webp    1x,
-                ../images/header/img1t@2x.webp    2x
+                ./images/header/img1t@1x.webp    1x,
+                ./images/header/img1t@2x.webp    2x
                   " type="image/webp" media="(min-width: 768px)">
             <source srcset="
-                ../images/header/img1t@1x.jpg    1x,
-                ../images/header/img1t@2x.jpg    2x
+                ./images/header/img1t@1x.jpg    1x,
+                ./images/header/img1t@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 768px)">
 <!-- mobile -->
+            <!-- <source srcset="
+                ./images/header/img1m@1x.webp    1x,
+                ./images/header/img1m@2x.webp    2x
+                  " type="image/webp" media="(max-width: 767px)"> -->
             <source srcset="
-                ../images/header/img1m@1x.webp    1x,
-                ../images/header/img1m@2x.webp    2x
-                  " type="image/webp" media="(max-width: 767px)">
-            <source srcset="
-                ../images/header/img1m@1x.jpg    1x,
-                ../images/header/img1m@2x.jpg    2x
+                ./images/header/img1m@1x.jpg    1x,
+                ./images/header/img1m@2x.jpg    2x
                   " type="image/jpeg" media="(max-width: 767px)">
-            <img src="../images/header/img1d@1x.jpg" alt="упоротий змій-морозинич">
+            <img src=",/images/header/img1d@1x.jpg" alt="упоротий змій-морозинич">
         </picture>
 
         <div>
