--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -45,10 +45,6 @@
                 ./images/header/img2t@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 768px)">
 <!-- mobile -->
-            <!-- <source srcset="
-                ./images/header/img2m@1x.webp    1x,
-                ./images/header/img2m@2x.webp    2x
-                  " type="image/webp" media="(max-width: 767px)"> -->
             <source srcset="
                 ./images/header/img2m@1x.jpg    1x,
                 ./images/header/img2m@2x.jpg    2x
@@ -83,15 +79,15 @@
                 ./images/header/img1t@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 768px)">
 <!-- mobile -->
-            <!-- <source srcset="
+            <source srcset="
                 ./images/header/img1m@1x.webp    1x,
                 ./images/header/img1m@2x.webp    2x
-                  " type="image/webp" media="(max-width: 767px)"> -->
+                  " type="image/webp" media="(max-width: 767px)">
             <source srcset="
                 ./images/header/img1m@1x.jpg    1x,
                 ./images/header/img1m@2x.jpg    2x
                   " type="image/jpeg" media="(max-width: 767px)">
-            <img src=",/images/header/img1d@1x.jpg" alt="упоротий змій-морозинич">
+            <img src="./images/header/img1d@1x.jpg" alt="упоротий змій-морозинич">
         </picture>
 
         <div>
