--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,26 +3,26 @@
    <h2 class="about-us__title">how it’s made?</h2>
    <picture>
       <source media="(min-width: 1200px)" srcset="
-            ../images/about/imgd@1x.webp 1x,
-            ../images/about/imgd@2x.webp 2x
+            ./images/about/imgd@1x.webp 1x,
+            ./images/about/imgd@2x.webp 2x
          " type="image/webp" />
       <source media="(min-width: 768px)" srcset="
-            ../images/about/imgt@1x.webp 1x,
-            ../images/about/imgt@2x.webp 2x
+            ./images/about/imgt@1x.webp 1x,
+            ./images/about/imgt@2x.webp 2x
          " type="image/webp" />
       <source media="(min-width: 320px)" srcset="
-            ../images/about/imgm@1x.webp 1x,
-            ../images/about/imgm@2x.webp 2x
+            ./images/about/imgm@1x.webp 1x,
+            ./images/about/imgm@2x.webp 2x
          " type="image/webp" />
 
-      <source media="(min-width: 1200px)" srcset="../images/about/imgd@1x.jpg 1x, ../images/about/imgd@2x.jpg 2x"
+      <source media="(min-width: 1200px)" srcset="./images/about/imgd@1x.jpg 1x, ./images/about/imgd@2x.jpg 2x"
          type="image/jpeg" />
-      <source media="(min-width: 768px)" srcset="../images/about/imgt@1x.jpg 1x, ../images/about/imgt@2x.jpg 2x"
+      <source media="(min-width: 768px)" srcset="./images/about/imgt@1x.jpg 1x, ./images/about/imgt@2x.jpg 2x"
          type="image/jpeg" />
-      <source media="(min-width: 320px)" srcset="../images/about/imgm@1x.jpg 1x, ../images/about/imgm@2x.jpg 2x"
+      <source media="(min-width: 320px)" srcset="./images/about/imgm@1x.jpg 1x, ./images/about/imgm@2x.jpg 2x"
          type="image/jpeg" />
 
-      <img class="about-us__img" src="../images/about/imgd@1x.jpg" alt="The cow is grazing" />
+      <img class="about-us__img" src="./images/about/imgd@1x.jpg" alt="The cow is grazing" />
    </picture>
    <p class="about-us__txt">
       Ice is a place where you will become not only a little happier, but also
