--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -43,13 +43,8 @@
             <source srcset="
                 ./images/header/img2t@1x.jpg    1x,
                 ./images/header/img2t@2x.jpg    2x
-                  " type="image/jpeg" media="(min-width: 768px)">
-<!-- mobile -->
-            <source srcset="
-                ./images/header/img2m@1x.jpg    1x,
-                ./images/header/img2m@2x.jpg    2x
-                  " type="image/jpeg" media="(max-width: 767px)">   
-            <img src="./images/header/img2m@2x.jpg" alt="тарілка з (кульковим морозивом * 9)">
+                  " type="image/jpeg" media="(max-width: 1199px)">
+            <img src="./images/header/img2t@1x.jpg" alt="тарілка з (кульковим морозивом * 9)">
         </picture>
         <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</P>
 <!-- не знайшов використання стрілки, не розумію її практичного значення -->
