змінив логотип на png

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,9 +1,6 @@
 <header>
     <a href="">
-        <svg>
-            <use href="./images/icons.svg#icon-ice-cream"></use>
-        </svg>
-        <p>ce</p>
+        <img src="./images/header/logo.png" alt="логотип компанії">
     </a>
     <nav>
         <ul>
