додав класи на хедер

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,16 +1,16 @@
-<header>
-    <a href="">
+<header class="container">
+    <a href="" class="logo">
         <img src="./images/header/logo.png" alt="логотип компанії">
     </a>
-    <nav>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">How it’s made?</a></li>
-            <li><a href="">Our products</a></li>
-            <li><a href="">Contact</a></li>
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__item"><a href="" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="" class="nav__link">How it’s made?</a></li>
+            <li class="nav__item"><a href="" class="nav__link">Our products</a></li>
+            <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
         </ul>
     </nav>
-    <button type="button">Buy now</button> <!-- модалка -->
+    <button type="button" class="btn__modal">Buy now</button> <!-- модалка -->
 </header>
 
 <!-- hero -->
