розібрався з помилкою та додав команду
npm run watch
дозбирає сторінку після кожної зміни єлементів, також автоматично її перезавантажує

--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -6,9 +6,9 @@
    &__title {
    }
    &__img {
-      @extend .circle;
+      @extend .circle !optional;
    }
-   &__txt {
+   &__txt {      
    }
    &__btn {
    }
