відкрив тег main

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -14,6 +14,7 @@
 </header>
 
 <!-- hero -->
+<main>
 <section class="container hero">
     <div class="hero__info">
         <h1 class="hero__title">ice cream made with passion</h1>
