Styles for Ab-1 (and many other ---)

--- a/src/partials/hero-modal.html
+++ b/src/partials/hero-modal.html
@@ -1,4 +1,4 @@
-<div class="modal-ingridients">
+<div class="modal-ingridients visually-hidden">
    <p class="modal-ingridients__title">Chololate icecream</p>
    <div class="modal-ingridients__wrapper">
       <div class="modal-ingridients__image-element"></div>
