--- a/src/sass/base/_base-styles.scss
+++ b/src/sass/base/_base-styles.scss
@@ -14,3 +14,32 @@ body {
 
    transition: scale var(--animation-time) var(--transition-timing-function);
 }
+
+img {
+   display: block;
+   max-width: 100%;
+   height: auto;
+}
+
+.container {
+   margin-left: auto;
+   margin-right: auto;
+   padding-left: 20px;
+   padding-right: 20px;
+
+   @media screen and (min-width: $mobile) {
+      width: $mobile;
+   }
+
+   @media screen and (min-width: $tablet) {
+      width: $tablet;
+      padding-left: 32px;
+      padding-right: 32px;
+   }
+
+   @media screen and (min-width: $desktop) {
+      width: $desktop;
+      padding-left: 16px;
+      padding-right: 16px;
+   }
+}
