--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,30 +1,30 @@
 <header class="container header">
-    <a href="" class="logo">
-        <img src="./images/header/logo.png" alt="логотип компанії">
-    </a>
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__item"><a href="" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="" class="nav__link">How it’s made?</a></li>
-            <li class="nav__item"><a href="" class="nav__link">Our products</a></li>
-            <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
-        </ul>
-    </nav>
-    <button type="button" class="btn__modal">Buy now</button> <!-- модалка -->
+   <a href="" class="logo">
+      <img src="./images/header/logo.png" alt="логотип компанії">
+   </a>
+   <nav class="nav">
+      <ul class="nav__list">
+         <li class="nav__item"><a href="" class="nav__link">Home</a></li>
+         <li class="nav__item"><a href="" class="nav__link">How it’s made?</a></li>
+         <li class="nav__item"><a href="" class="nav__link">Our products</a></li>
+         <li class="nav__item"><a href="" class="nav__link">Contact</a></li>
+      </ul>
+   </nav>
+   <button type="button" class="btn__modal">Buy now</button> <!-- модалка -->
 </header>
 
 <!-- hero -->
 <main>
-<section class="container hero">
-    <div class="hero__info">
-        <h1 class="hero__title">ice cream made with passion</h1>
-        <a href="" class="hero__link">Products</a>
-        <a href="" class="hero__link">How it’s made?</a>
-    </div>
+   <section class="container hero">
+      <div class="hero__info">
+         <h1 class="hero__title">ice cream made with passion</h1>
+         <a href="" class="hero__link">Products</a>
+         <a href="" class="hero__link">How it’s made?</a>
+      </div>
 
-    <div class="hero__lorem-ipsum">
-        <picture class="hero__img">
-<!-- desc -->
+      <div class="hero__lorem-ipsum">
+         <picture class="hero__img">
+            <!-- desc -->
             <source srcset="
                 ./images/header/img2d@1x.webp    1x,
                 ./images/header/img2d@2x.webp    2x
@@ -33,7 +33,7 @@
                 ./images/header/img2d@1x.jpg    1x,
                 ./images/header/img2d@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 1200px)">
-<!-- tablet -->
+            <!-- tablet -->
             <source srcset="
                 ./images/header/img2t@1x.webp    1x,
                 ./images/header/img2t@2x.webp    2x
@@ -43,17 +43,18 @@
                 ./images/header/img2t@2x.jpg    2x
                   " type="image/jpeg" media="(max-width: 1199px)">
             <img src="./images/header/img2t@1x.jpg" alt="тарілка з (кульковим морозивом * 9)">
-        </picture>
-        <p class="hero__exscerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-<!-- не знайшов використання стрілки, не розумію її практичного значення -->
-        <svg class="hero__arrow">
+         </picture>
+         <p class="hero__exscerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et</p>
+         <!-- не знайшов використання стрілки, не розумію її практичного значення -->
+         <svg class="hero__arrow">
             <use href="./images/icons.svg#icon-arrow-default"></use>
-        </svg>
-    </div>
+         </svg>
+      </div>
 
-    <div class="hero__company-info">
-        <picture class="hero__img-animation">
-<!-- desc -->
+      <div class="hero__company-info">
+         <picture class="hero__img-animation">
+            <!-- desc -->
             <source srcset="
                 ./images/header/img1d@1x.webp    1x,
                 ./images/header/img1d@2x.webp    2x
@@ -62,7 +63,7 @@
                 ./images/header/img1d@1x.jpg    1x,
                 ./images/header/img1d@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 1200px)">
-<!-- tablet -->
+            <!-- tablet -->
             <source srcset="
                 ./images/header/img1t@1x.webp    1x,
                 ./images/header/img1t@2x.webp    2x
@@ -71,7 +72,7 @@
                 ./images/header/img1t@1x.jpg    1x,
                 ./images/header/img1t@2x.jpg    2x
                   " type="image/jpeg" media="(min-width: 768px)">
-<!-- mobile -->
+            <!-- mobile -->
             <source srcset="
                 ./images/header/img1m@1x.webp    1x,
                 ./images/header/img1m@2x.webp    2x
@@ -81,19 +82,19 @@
                 ./images/header/img1m@2x.jpg    2x
                   " type="image/jpeg" media="(max-width: 767px)">
             <img src="./images/header/img1d@1x.jpg" alt="упоротий змій-морозинич">
-        </picture>
+         </picture>
 
-        <div class="hero__cafe-info">
+         <div class="hero__cafe-info">
             <ul class="hero__list-cafe">
-                <li class="hero__item-cafe">
-                    <p class="hero__numbers">16</p>
-                    <p class="hero__text">cafes</p>
-                </li>
-                <li class="hero__item-cafe">
-                    <p class="hero__numbers">23</p>
-                    <p class="hero__text">food trucks</p>
-                </li>
+               <li class="hero__item-cafe">
+                  <p class="hero__numbers">16</p>
+                  <p class="hero__text">cafes</p>
+               </li>
+               <li class="hero__item-cafe">
+                  <p class="hero__numbers">23</p>
+                  <p class="hero__text">food trucks</p>
+               </li>
             </ul>
-        </div>
-    </div>
-</section>
+         </div>
+      </div>
+   </section>
