Стилі для кнопок

--- a/src/partials/btn-border.html
+++ b/src/partials/btn-border.html
@@ -9,12 +9,17 @@
 <!-- кнопки для секції HERO -->
 <button type="button" class="hero-btn-one">Products</button>
 
-<button type="button" class="hero-btn-two">How it’s made?</button>
+<!-- ссилка чи кнопка? -->
+<a href="" class="hero-link">How it’s made?</a>
+<!-- <button type="button" class="hero-btn-two">How it’s made?</button> -->
 
+<!-- кнопки для секції HEADER -->
 <button type="button" class="header-btn">Buy now</button>
 
+<!-- кнопки для секції ADVANTAGES -->
 <button type="button" class="advantages-btn">Read more</button>
 
+<!-- кнопки для секції CONTACTS -->
 <button type="button" class="contacts-btn-one">Our Locations</button>
 
 <button type="button" class="contacts-btn-two">Franchise</button>
