--- a/src/partials/btn-border.html
+++ b/src/partials/btn-border.html
@@ -14,12 +14,12 @@
 <!-- <button type="button" class="hero-btn-two">How it’s made?</button> -->
 
 <!-- кнопки для секції HEADER -->
-<button type="button" class="header-btn">Buy now</button>
+<button type="button" class="header-btn">Buy now &gt;</button>
 
 <!-- кнопки для секції ADVANTAGES -->
-<button type="button" class="advantages-btn">Read more</button>
+<button type="button" class="advantages-btn">Read more &gt;</button>
 
 <!-- кнопки для секції CONTACTS -->
-<button type="button" class="contacts-btn-one">Our Locations</button>
+<button type="button" class="contacts-btn-one">Our Locations &gt;</button>
 
-<button type="button" class="contacts-btn-two">Franchise</button>
+<button type="button" class="contacts-btn-two">Franchise &gt;</button>
