--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -16,11 +16,8 @@
             <p class="products__description">Soft ice cream with a delicate taste. Made with milk, cream, sugar and
                 natural
                 stabilizer</p>
-            <a class="products__link" href="./products-modal.html">
-                <svg class="product__icon" width="40" height="16">
-                    <use href="../images/icons.svg#icon-arrow-default"></use>
-                </svg>
-            </a>
+            <!-- Open modal -->
+            <button type="button" class="btn__modal">arrow</button>
         </li>
 
         <li class="products__item">
@@ -29,12 +26,8 @@
                 without
                 the
                 use of preservatives and flavor enhancers</p>
-            <a class="products__link" href="./products-modal.html">
-                <!-- Вот тут добавляю svg - пропадает с разметки 3тий элемент списка.. Понять не могу почему ! -->
-                <svg class="product__icon" width="40" height="16">
-                    <use href="../images/icons.svg#icon-arrow-default"></use>
-                </svg>
-            </a>
+            <!-- Open modal -->
+            <button type="button" class="btn__modal">arrow</button>
         </li>
 
         <li class="products__item">
@@ -43,11 +36,8 @@
                 fruits,
                 berries and other sweets of your choice
             </p>
-            <a class="products__link" href="./products-modal.html">
-                <svg class="product__icon" width="40" height="16">
-                    <use href="../images/icons.svg#icon-arrow-default"></use>
-                </svg>
-            </a>
+            <!-- Open modal -->
+            <button type="button" class="btn__modal">arrow</button>
         </li>
 
     </ul>
