--- a/src/partials/hero-modal.html
+++ b/src/partials/hero-modal.html
@@ -76,13 +76,14 @@
    </ul>
    <form action="" class="modal-ingridients__form">
       <label for="" class="modal-ingridients__label">
-         <input type="text" class="modal-ingridients__input" placeholder="Name">
+         <input type="text" class="modal-ingridients__input" placeholder="Name" required>
       </label>
       <label for="" class="modal-ingridients__label">
-         <input type="text" class="modal-ingridients__input" placeholder="Phone">
+         <input type="tel" class="modal-ingridients__input" placeholder="Phone" required>
       </label>
       <label for="" class="modal-ingridients__label">
-         <textarea type="text" class="modal-ingridients__input modal-ingridients__textarea" placeholder="Comment">
+         <textarea type="text" class="modal-ingridients__input modal-ingridients__textarea"
+            placeholder="Comment"></textarea>
       </label>
       <button type="submit">Submit</button>
    </form>
