--- a/src/partials/franches-modal.html
+++ b/src/partials/franches-modal.html
@@ -7,11 +7,11 @@
         </label>
 
         <label for="" class="franchise-modal__label">
-           <input type="text" class="franchise-modal__input" placeholder="Phone">
+           <input type="tel" class="franchise-modal__input" placeholder="Phone">
         </label>
 
         <label for="" class="franchise-modal__label">
-            <input type="text" class="franchise-modal__input" placeholder="Email">
+            <input type="email" class="franchise-modal__input" placeholder="Email">
          </label>
 
         <label for="" class="franchise-modal__label">
