--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,33 +4,61 @@
       <h2 class="about-us__title">how it’s made?</h2>
       <div class="about-us__block">
          <picture class="about-us__thumb">
-            <source media="(min-width: 1200px)" srcset="
+            <source
+               media="(min-width: 1200px)"
+               srcset="
                   ./images/about/imgd@1x.webp 1x,
                   ./images/about/imgd@2x.webp 2x
-               " type="image/webp" />
-            <source media="(min-width: 768px)" srcset="
+               "
+               type="image/webp"
+            />
+            <source
+               media="(min-width: 768px)"
+               srcset="
                   ./images/about/imgt@1x.webp 1x,
                   ./images/about/imgt@2x.webp 2x
-               " type="image/webp" />
-            <source media="(min-width: 320px)" srcset="
+               "
+               type="image/webp"
+            />
+            <source
+               media="(min-width: 320px)"
+               srcset="
                   ./images/about/imgm@1x.webp 1x,
                   ./images/about/imgm@2x.webp 2x
-               " type="image/webp" />
+               "
+               type="image/webp"
+            />
 
-            <source media="(min-width: 1200px)" srcset="
+            <source
+               media="(min-width: 1200px)"
+               srcset="
                   ./images/about/imgd@1x.jpg 1x,
                   ./images/about/imgd@2x.jpg 2x
-               " type="image/jpeg" />
-            <source media="(min-width: 768px)" srcset="
+               "
+               type="image/jpeg"
+            />
+            <source
+               media="(min-width: 768px)"
+               srcset="
                   ./images/about/imgt@1x.jpg 1x,
                   ./images/about/imgt@2x.jpg 2x
-               " type="image/jpeg" />
-            <source media="(min-width: 320px)" srcset="
+               "
+               type="image/jpeg"
+            />
+            <source
+               media="(min-width: 320px)"
+               srcset="
                   ./images/about/imgm@1x.jpg 1x,
                   ./images/about/imgm@2x.jpg 2x
-               " type="image/jpeg" />
+               "
+               type="image/jpeg"
+            />
 
-            <img class="about-us__img" src="./images/about/imgd@1x.jpg" alt="The cow is grazing" />
+            <img
+               class="about-us__img"
+               src="./images/about/imgd@1x.jpg"
+               alt="The cow is grazing"
+            />
          </picture>
 
          <div class="about-us__right-block">
@@ -53,7 +81,7 @@
             <button class="about-us__btn" type="button">
                Read more
                <svg class="about-us__icon" width="12" height="12">
-                  <use href="./images/icons.svg#icon-arrow-btn"></use>
+                  <use href="./images/icons.svg#icon-Frame-38"></use>
                </svg>
             </button>
          </div>
